// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatastreamDublinCoreAddButtons renders with appropriate parent details (using full storage) 1`] = `
[
  <h3>
    Add Blank Field:
  </h3>,
  <button
    onClick={[Function]}
  />,
  <button
    onClick={[Function]}
  />,
  <h3>
    Clone Metadata:
  </h3>,
  "PidPicker: {"selected":"","parents":[{"pid":"parent:123","title":"Parent"}]}",
]
`;

exports[`DatastreamDublinCoreAddButtons renders with appropriate parent details (using shallow storage) 1`] = `
[
  <h3>
    Add Blank Field:
  </h3>,
  <button
    onClick={[Function]}
  />,
  <button
    onClick={[Function]}
  />,
  <h3>
    Clone Metadata:
  </h3>,
  "PidPicker: {"selected":"","parents":[{"pid":"parent:123","title":"Parent"}]}",
]
`;

exports[`DatastreamDublinCoreAddButtons renders with selected clone pid 1`] = `
[
  <h3>
    Add Blank Field:
  </h3>,
  <button
    onClick={[Function]}
  />,
  <button
    onClick={[Function]}
  />,
  <h3>
    Clone Metadata:
  </h3>,
  "PidPicker: {"selected":"foo","parents":[]}",
  <button
    onClick={[Function]}
  >
    Clone
  </button>,
]
`;

exports[`DatastreamDublinCoreAddButtons renders without selected clone pid 1`] = `
[
  <h3>
    Add Blank Field:
  </h3>,
  <button
    onClick={[Function]}
  />,
  <button
    onClick={[Function]}
  />,
  <h3>
    Clone Metadata:
  </h3>,
  "PidPicker: {"selected":"","parents":[]}",
]
`;
